ext2_ls = executable('ext2_ls',
                     'ext2_ls.c',
                     dependencies: tools_deps,
                     c_args: tools_cargs,
                     install : true,
                     install_dir: tools_installdir)

ext2_cat = executable('ext2_cat',
                      'ext2_cat.c',
                      dependencies: tools_deps,
                      c_args: tools_cargs,
                      install : true,
                      install_dir: tools_installdir)
